# yyapis-cpp

./: README.md
mic-stream-sample/: .gitignore
mic-stream-sample/code/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  audioclassification.cc  config.cc
quickstarts/audio-classification/mic-stream-sample/: .gitignore  README.md
quickstarts/audio-classification/mic-stream-sample/code/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  audioclassification.cc  config.cc  config.h  start.sh  vcpkg.json
quickstarts/speech-to-text/FileStreamSample/: .gitignore  README.md  yysystem.Dockerfile
quickstarts/speech-to-text/FileStreamSample/code/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  config.cc  parse_arguments.h  speech.cc  start.sh  vcpkg.json
quickstarts/speech-to-text/FileStreamSample/code/yy-sample/: .gitignore  CMakeLists.txt  config.cc  config.h  parse_arguments.cc  parse_arguments.h  speech.cc  start.sh
quickstarts/speech-to-text/mic-stream-sample/: .gitignore  README.md
quickstarts/speech-to-text/mic-stream-sample/code/: CMakeLists.txt  config.cc  config.h  speech.cc  start.sh  vcpkg.json
